[gd_scene load_steps=19 format=3 uid="uid://drhl7cdk47d4u"]

[ext_resource type="Script" path="res://ui/player/playerUI.gd" id="1_eqgwj"]
[ext_resource type="Theme" uid="uid://y1uq7mq7btna" path="res://resources/themes/labelTheme.tres" id="1_jxssv"]
[ext_resource type="Texture2D" uid="uid://qycq3nvxn0qt" path="res://assets/sprites/drunknessBar/testCase24x24.png" id="3_hbfkt"]
[ext_resource type="Texture2D" uid="uid://bi4sthe820b8c" path="res://assets/sprites/drunknessBar/4outof5full.png" id="4_46sko"]
[ext_resource type="Texture2D" uid="uid://wiujn8vlgte1" path="res://assets/sprites/drunknessBar/3outof5full.png" id="5_xuwjh"]
[ext_resource type="Texture2D" uid="uid://clgafagnmofs7" path="res://assets/sprites/drunknessBar/2outof5full.png" id="6_wdtmu"]
[ext_resource type="Texture2D" uid="uid://7yl8g3nykfu8" path="res://assets/sprites/drunknessBar/1outof5full.png" id="7_xa2pk"]
[ext_resource type="Texture2D" uid="uid://bdqospr4psq68" path="res://assets/sprites/drunknessBar/empty.png" id="8_3kjdx"]
[ext_resource type="PackedScene" uid="uid://c0b5r8jtda1o5" path="res://resources/postProcessing/drunkFilter/drunknessFilter.tscn" id="9_o5gp8"]

[sub_resource type="Theme" id="Theme_kkyx2"]

[sub_resource type="Animation" id="Animation_1ex8d"]
resource_name = "4OUTOF5FULL"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_46sko")]
}

[sub_resource type="Animation" id="Animation_07yv2"]
resource_name = "3OUTOF5FULL"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_xuwjh")]
}

[sub_resource type="Animation" id="Animation_apcqo"]
resource_name = "2OUTOF5FULL"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_wdtmu")]
}

[sub_resource type="Animation" id="Animation_ab1ed"]
resource_name = "1OUTOF5FULL"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_xa2pk")]
}

[sub_resource type="Animation" id="Animation_k5phg"]
resource_name = "EMPTY"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_3kjdx")]
}

[sub_resource type="Animation" id="Animation_01u54"]
resource_name = "FULL"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_hbfkt")]
}

[sub_resource type="Animation" id="Animation_6s2lk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_hbfkt")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3nxne"]
_data = {
"1OUTOF5FULL": SubResource("Animation_ab1ed"),
"2OUTOF5FULL": SubResource("Animation_apcqo"),
"3OUTOF5FULL": SubResource("Animation_07yv2"),
"4OUTOF5FULL": SubResource("Animation_1ex8d"),
"EMPTY": SubResource("Animation_k5phg"),
"FULL": SubResource("Animation_01u54"),
"RESET": SubResource("Animation_6s2lk")
}

[node name="playerGameUi" type="CanvasLayer"]
script = ExtResource("1_eqgwj")

[node name="scoreUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_kkyx2")

[node name="MarginContainer" type="MarginContainer" parent="scoreUi"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 47
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="scoreUi/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="scoreUi/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="scoreLabel" type="Label" parent="scoreUi/MarginContainer/VBoxContainer/HBoxContainer"]
z_index = -1
layout_mode = 2
theme = ExtResource("1_jxssv")
theme_override_font_sizes/font_size = 8
text = "SCORE"

[node name="score" type="Label" parent="scoreUi/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jxssv")
theme_override_font_sizes/font_size = 8
text = "0"

[node name="drunknessBarUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="drunknessBarUi"]
z_index = -1
position = Vector2(25, 25)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_hbfkt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="drunknessBarUi"]
libraries = {
"": SubResource("AnimationLibrary_3nxne")
}

[node name="DrunknessFilter" parent="." instance=ExtResource("9_o5gp8")]
visible = false
